[tool.poetry]
name = "pythonrobotics"
version = "0.0.0"
description = "Python sample codes for robotics algorithms."
authors = ["AtsushiSakai <asakaig@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.2"
scipy = "^1.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
cvxpy = "1.1.18"
pytest = "^7.0.1"
pytest-xdist = "2.5.0"
mypy = "0.931"
flake8 = "4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
